--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,17 @@
   .embla__slide__img {
     width: 100%;
     min-width: 100%;
-
   }
-  .embla__container{
+  .embla__container {
     margin-left: 2px;
   }
+}
+.WidgetBackground__Content-sc-1ho7q3r-2 {
+  height: 265px;
+  overflow: hidden;
+  margin: 50px 0px 50px 0px;
+}
+
+.Main__Content-sc-1oq93m5-1 {
+  margin: 0px 15px 100px 15px;
 }
